syntax = "proto3";

// Định nghĩa package để gom nhóm
package ecommerce;

// Service: Tập hợp các chức năng (RPC methods)
service ProductService {
  // Hàm RPC: Input là ProductId, Output là ProductInfo
  rpc GetProduct (ProductIdStruct) returns (ProductInfoStruct) {}
}

// Định nghĩa message (cấu trúc dữ liệu)
message ProductIdStruct {
  int32 id = 1;
}

message ProductInfoStruct {
  int32 id = 1;
  string name = 2;
  double price = 3;
  bool inStock = 4;
}
